# plutus

./: cabal.project  shell.nix
fake-pab/src/: Server.hs
marlowe/pab/: Main.hs
marlowe/src/Language/Marlowe/: Semantics.hs  Util.hs
marlowe/test/Spec/Marlowe/: Marlowe.hs
nix/modules/: pab.nix
nix/pkgs/haskell/: haskell.nix
nix/pkgs/haskell/materialized-darwin/: default.nix
nix/pkgs/haskell/materialized-linux/: default.nix
nix/pkgs/haskell/materialized-linux/.plan.nix/: plutus-pab.nix  plutus-tx.nix
nix/pkgs/haskell/materialized-unix/.plan.nix/: plutus-tx.nix
nix/tests/vm-tests/: all.nix  pab.nix
playground-common/src/: Schema.hs
playground-common/src/PSGenerator/: Common.hs
plutus-chain-index/test/: Generators.hs
plutus-core/plutus-core/src/PlutusCore/: Data.hs
plutus-core/plutus-core/src/PlutusCore/Evaluation/Machine/: ExMemory.hs
plutus-ledger-api/src/Plutus/V1/Ledger/: Api.hs  Bytes.hs  Contexts.hs  Credential.hs  Crypto.hs  Orphans.hs  Scripts.hs  Value.hs
plutus-ledger/src/Ledger/: Generators.hs  Index.hs
plutus-ledger/test/: Spec.hs
plutus-pab/: plutus-pab.cabal
plutus-pab-client/: default.nix
plutus-pab/app/: CommandParser.hs
plutus-pab/examples/: ContractExample.hs  Main.hs
plutus-pab/examples/ContractExample/: AtomicSwap.hs  PayToWallet.hs
plutus-pab/examples/uniswap/: Main.hs
plutus-pab/src/Cardano/Protocol/Socket/: Type.hs
plutus-pab/src/Plutus/PAB/: App.hs  Core.hs  Run.hs  Simulator.hs
plutus-pab/src/Plutus/PAB/Db/: Beam.hs
plutus-pab/src/Plutus/PAB/Db/Beam/: ContractDefinitionStore.hs  ContractStore.hs
plutus-pab/src/Plutus/PAB/Effects/: Contract.hs  DbStore.hs
plutus-pab/src/Plutus/PAB/Effects/Contract/: Builtin.hs
plutus-pab/src/Plutus/PAB/Monitoring/: PABLogMsg.hs
plutus-pab/src/Plutus/PAB/Run/: Cli.hs  Command.hs  CommandParser.hs  PSGenerator.hs
plutus-pab/src/Plutus/PAB/Webserver/: Handler.hs  Types.hs  WebSocket.hs
plutus-pab/test/full/Plutus/PAB/: CoreSpec.hs
plutus-pab/test/full/Plutus/PAB/Effects/Contract/: ContractTest.hs
plutus-pab/test/full/Plutus/PAB/Simulator/: Test.hs
plutus-playground-server/test/Playground/: UsecasesSpec.hs
plutus-tx/: plutus-tx.cabal
plutus-tx-plugin/src/PlutusTx/Compiler/: Builtins.hs  Expr.hs
plutus-tx-plugin/test/Lift/: Spec.hs
plutus-tx-plugin/test/Plugin/Primitives/: Spec.hs
plutus-tx-plugin/test/TH/: Spec.hs
plutus-tx/src/PlutusTx/: Builtins.hs  Eq.hs  Ord.hs  Prelude.hs  Semigroup.hs
plutus-tx/src/PlutusTx/Builtins/: Class.hs  Internal.hs
plutus-tx/src/PlutusTx/IsData/: Class.hs
plutus-tx/src/PlutusTx/Lift/: Instances.hs
plutus-use-cases/bench/: Bench.hs
plutus-use-cases/scripts/: Main.hs
plutus-use-cases/test/Spec/: Governance.hs  gameStateMachine.pir  governance.pir  multisigStateMachine.pir  renderGuess.txt
